--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     background-image: url(img/wedding-1361076_1920.jpg);
     background-size: cover;
     background-position: center;
-    z-index: 1;
+    z-index: 3;
 
 }
 
@@ -66,6 +66,8 @@ body {
 .mynavbar {
     background-color: rgba(255, 255, 255, 0.5) !important;
     backdrop-filter: blur(4px);
+    position: sticky;
+    z-index: 4;
 }
 
 .mynavbar .offcanvas {
@@ -90,20 +92,39 @@ body {
     padding-top: 10rem;
     padding-bottom: 5rem;
     z-index: 1;
+    position: relative;
 }
 
+.home .goyang1 {
+    z-index: -2;
+    position: absolute;
+    width: 30%;
+    margin-top: -90px;
+    animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+    
+}
+
+.home .goyang {
+    z-index: -2;
+    position: absolute;
+    width: 30%;
+    margin-top: -90px;
+    animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
 
 .home h2 {
     color: #00aeff;
     font-family: "Sacramento", cursive;
     font-size: 5rem;
     font-weight: bold;
+    z-index: 2;
 }
 
 .home h3 {
     color: #444;
     font-size: 1.5rem;
     margin-bottom: 3rem;
+    z-index: 2;
 }
 
 .home h4 {
@@ -114,10 +135,12 @@ body {
 .home p {
     font-size: 1.1rem;
     color: #666;
+    z-index: 2;
 }
 
 .home .couple {
     margin-top: 100px;
+    z-index: 2;
 }
 
 .home .couple h3 {
@@ -125,17 +148,20 @@ body {
     font-weight: bold;
     color: #00aeff;
     font-size: 2.4rem;
+    z-index: 2;
 }
 
 .home .couple img {
     width: 100%;
+    z-index: 2;
 }
 
 .info {
     background-image: url(img/symphony1.png);
-    z-index: -1;
-    min-height: 100vh;
     z-index: 1;
+    position: relative;
+    min-height: 100vh;
+
 }
 
 .info a {
@@ -184,6 +210,7 @@ body {
     background-image: url(img/symphony.png);
     min-height: 100vh;
     z-index: 1;
+    position: relative;
 }
 .rsvp h2 {
     font-family: "Sacramento";
@@ -211,6 +238,11 @@ body {
     background-color: white;
     color: #00aeff;
     border-radius: 12%;
+}
+
+.mynavbar1 {
+    z-index: 2;
+    position: sticky;
 }
 
 .animate__animated.animate__bounce {
@@ -324,6 +356,46 @@ body {
     animation-delay: -2s;
 }
 
+.shake-tl {
+	animation: shake-tl 25s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+    animation-iteration-count: infinite;
+    position: relative;
+}
+
+.slide-in-tl {
+	animation: slide-in-tl 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+/**
+ * ----------------------------------------
+ * animation heartbeat
+ * ----------------------------------------
+ */
+ @keyframes heartbeat {
+    from {
+      transform: scale(1);
+      transform-origin: center center;
+      animation-timing-function: ease-out;
+    }
+    10% {
+      transform: scale(0.91);
+      animation-timing-function: ease-in;
+    }
+    17% {
+      transform: scale(0.98);
+      animation-timing-function: ease-out;
+    }
+    33% {
+      transform: scale(0.87);
+      animation-timing-function: ease-in;
+    }
+    45% {
+      transform: scale(1);
+      animation-timing-function: ease-out;
+    }
+  }
+
+
 
 /* tility Clases */
 @keyframes animate {
@@ -335,6 +407,46 @@ body {
     80%{opacity: 0.9; transform: translate(20px) rotate(180deg);}
     80%{top: 110%; transform: translate(-20px) rotate(225deg);}
 }
+
+@keyframes shake-tl {
+    0%,
+    100% {
+      transform: rotate(0deg);
+      transform-origin: 0 0;
+    }
+    10% {
+      transform: rotate(2deg);
+    }
+    20%,
+    40%,
+    60% {
+      transform: rotate(-4deg);
+    }
+    30%,
+    50%,
+    70% {
+      transform: rotate(4deg);
+    }
+    80% {
+      transform: rotate(-2deg);
+    }
+    90% {
+      transform: rotate(2deg);
+    }
+  }
+
+  @keyframes slide-in-top {
+    0% {
+      transform: translateY(-1000px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+  
 
 /* Media Query */
 
@@ -511,6 +623,6 @@ body {
     }
 
     .home .couple {
-        margin-top: 60px;
+        margin-top: 73px;
     }
 }
