--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
 body {
     font-size: 1.2rem;
     font-family: "Work Sans", sans-serif;
-    min-height: 2000px;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    
 }
 
 .hero::before {
@@ -64,10 +67,9 @@ body {
 
 
 .mynavbar {
-    background-color: rgba(255, 255, 255, 0.5) !important;
-    backdrop-filter: blur(10px);
-    position: sticky;
-    z-index: 6;
+    background-color: rgba(255, 255, 255, 0.352);
+    backdrop-filter: blur(4px);
+    z-index: 7;
 }
 
 .mynavbar .offcanvas {
@@ -93,6 +95,10 @@ body {
     padding-bottom: 5rem;
     z-index: 5;
     position: relative;
+}
+
+.home .bunga {
+    overflow-x: hidden;
 }
 
 .home .goyang1 {
@@ -151,9 +157,9 @@ body {
     z-index: -2;
     position: absolute;
     right: 0px;
-    bottom: 0px;
+    bottom: -50px;
     width: 35%;
-    margin-bottom: -50px;
+
     animation: shake-br 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
     
 }
@@ -162,9 +168,8 @@ body {
     z-index: -2;
     position: absolute;
     right: 0px;
-    bottom: 0px;
+    bottom: -50px;
     width: 35%;
-    margin-bottom: -50px;
     animation: shake-br 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
 
@@ -172,10 +177,8 @@ body {
     z-index: -2;
     position: absolute;
     width: 30%;
-    right: 0px;
-    bottom: 0px;
-    margin-right: -70px;
-    margin-bottom: -10px;
+    right: -70px;
+    bottom: -10px;
     animation: shake-br 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
 
@@ -183,9 +186,8 @@ body {
     z-index: -2;
     position: absolute;
     width: 50%;
-    margin-bottom: -60px;
     right: 0px;
-    bottom: 0px;
+    bottom: -60px;
     animation: shake-br 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
 
@@ -193,20 +195,16 @@ body {
     z-index: -2;
     position: absolute;
     width: 30%;
-    right: 0px;
-    bottom: 0px;
-    margin-right: -50px;
-    margin-bottom: -50px;
+    right: -50px;
+    bottom: -50px;
     animation: shake-br 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
 .home .yang2 {
     z-index: -2;
     position: absolute;
-    right: 0px;
-    bottom: 0px;
+    right: -50px;
+    bottom: -50px;
     width: 20%;
-    margin-right: -50px;
-    margin-bottom: -50px;
     animation: shake-br 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
 
