--- a/style.css
+++ b/style.css
@@ -67,8 +67,7 @@ body {
 
 
 .mynavbar {
-    background-color: rgba(255, 255, 255, 0.352);
-    backdrop-filter: blur(4px);
+    background-color: #00aeff;
     z-index: 7;
 }
 
@@ -80,7 +79,7 @@ body {
     font-family: "Sacramento", cursive;
     font-size: 3rem;
     font-weight: bold;
-    color: #00aeff;
+    color: rgba(0, 174, 255, 0);
 }
 
 .mynavbar .nav-link {
@@ -90,10 +89,10 @@ body {
 .home {
     background-image: url(img/symphony.png);
     min-height: 100vh;
-    margin-top: -6.2rem;
+    margin-top: -1rem;
     padding-top: 10rem;
     padding-bottom: 5rem;
-    z-index: 5;
+    z-index: 1;
     position: relative;
 }
 
@@ -101,11 +100,31 @@ body {
     overflow-x: hidden;
 }
 
+.home .samping1 {
+    z-index: -2;
+    position: absolute;
+    bottom: 200px;
+    width: 35%;
+    left: -50px;
+    margin: auto;
+    animation: shake-left 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+
+.home .samping2 {
+    z-index: -2;
+    position: absolute;
+    top: 200px;
+    width: 30%;
+    right: -40px;
+    margin: auto;
+    animation: shake-right 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+
 .home .goyang1 {
     z-index: -2;
     position: absolute;
     width: 35%;
-    margin-top: -90px;
+    top: -50px;
     animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
     
 }
@@ -114,7 +133,7 @@ body {
     z-index: -2;
     position: absolute;
     width: 35%;
-    margin-top: -90px;
+    top: -50px;
     animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
 
@@ -123,8 +142,8 @@ body {
     z-index: -2;
     position: absolute;
     width: 30%;
-    margin-left: -70px;
-    margin-top: -50px;
+    left: -70px;
+    top: -10px;
     animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
 
@@ -132,7 +151,7 @@ body {
     z-index: -2;
     position: absolute;
     width: 50%;
-    margin-top: -100px;
+    top: -60px;
     animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
 
@@ -140,17 +159,22 @@ body {
     z-index: -2;
     position: absolute;
     width: 30%;
-    margin-top: -90px;
-    margin-left: -50px;
+    top: -50px;
+    left: -50px;
     animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
 .home .goyang2 {
     z-index: -2;
     position: absolute;
     width: 20%;
-    margin-top: -90px;
-    margin-left: -50px;
+    top: -50px;
+    left: -50px;
     animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+
+.home .couple a {
+    font-size: 1.3rem;
+    color: #666;
 }
 
 .home .yang1 {
@@ -252,18 +276,32 @@ body {
     z-index: 2;
 }
 
-.border {
-    position: relative;
-    background-color: #00aeff;
-    z-index: 2;
-}
-
 .info {
     background-image: url(img/symphony.png);
-    z-index: 5;
+    z-index: 3;
     position: relative;
     min-height: 100vh;
 
+}
+
+.info .samping1 {
+    z-index: -2;
+    position: absolute;
+    bottom: 200px;
+    width: 35%;
+    right: -50px;
+    margin: auto;
+    animation: shake-right 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+
+.info .samping2 {
+    z-index: -2;
+    position: absolute;
+    top: 200px;
+    width: 30%;
+    left: -40px;
+    margin: auto;
+    animation: shake-left 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
 
 .info .goyang1 {
@@ -289,7 +327,7 @@ body {
     z-index: -2;
     position: absolute;
     width: 30%;
-    right: 0px;
+    right: -70px;
     margin-top: -10px;
     animation: shake-tr 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
@@ -322,9 +360,63 @@ body {
     animation: shake-tr 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
 }
 
+.info .yang1 {
+    z-index: -2;
+    position: absolute;
+    left: 0px;
+    bottom: -50px;
+    width: 35%;
+    animation: shake-bl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+    
+}
+
+.info .yang {
+    z-index: -2;
+    position: absolute;
+    left: 0px;
+    bottom: -50px;
+    width: 35%;
+    animation: shake-bl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+
+.info .yang4 {
+    z-index: -2;
+    position: absolute;
+    width: 30%;
+    left: -70px;
+    bottom: -10px;
+    animation: shake-bl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+
+.info .yang5 {
+    z-index: -2;
+    position: absolute;
+    width: 50%;
+    left: 0px;
+    bottom: -60px;
+    animation: shake-bl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+
+.info .yang3 {
+    z-index: -2;
+    position: absolute;
+    width: 30%;
+    left: -50px;
+    bottom: -50px;
+    animation: shake-bl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.info .yang2 {
+    z-index: -2;
+    position: absolute;
+    left: -50px;
+    bottom: -50px;
+    width: 20%;
+    animation: shake-bl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+
 .info a {
     background-color: #00aeff;
-    color: white;
+    color: rgb(0, 0, 0);
     font-family: "Work Sans", sans-serif;
 }
 
@@ -339,7 +431,7 @@ body {
 .info .alamat  {
     font-size: 1.2rem;
     font-family: "Work Sans", sans-serif;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 .info .description {
@@ -349,13 +441,16 @@ body {
 
 .info .card {
     background-color: #00aeff00 !important;
-    color: rgb(255, 255, 255) !important;
+    color: rgb(0, 0, 0) !important;
     border: 1px #00aeff00;
+    width: 100px;
+    position: relative;
+    margin:auto;    
 }
 
 .info .card-header {
     background-color: #00aeff00;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid rgb(0, 0, 0);
     text-transform: uppercase;
     letter-spacing: 0.1rem;
 }
@@ -399,7 +494,7 @@ body {
 }
 
 .mynavbar1 {
-    z-index: 6;
+    z-index: 2;
     position: sticky;
 }
 
@@ -566,6 +661,34 @@ body {
     80%{top: 110%; transform: translate(-20px) rotate(225deg);}
 }
 
+@keyframes shake-bl {
+    0%,
+    100% {
+      transform: rotate(0deg);
+      transform-origin: 0 100%;
+    }
+    10% {
+      transform: rotate(2deg);
+    }
+    20%,
+    40%,
+    60% {
+      transform: rotate(-4deg);
+    }
+    30%,
+    50%,
+    70% {
+      transform: rotate(4deg);
+    }
+    80% {
+      transform: rotate(-2deg);
+    }
+    90% {
+      transform: rotate(2deg);
+    }
+  }
+  
+
 @keyframes shake-tl {
     0%,
     100% {
@@ -658,7 +781,59 @@ body {
     }
   }
   
-  
+  @keyframes shake-left {
+    0%,
+    100% {
+      transform: rotate(0deg);
+      transform-origin: 0 50%;
+    }
+    10% {
+      transform: rotate(2deg);
+    }
+    20%,
+    40%,
+    60% {
+      transform: rotate(-4deg);
+    }
+    30%,
+    50%,
+    70% {
+      transform: rotate(4deg);
+    }
+    80% {
+      transform: rotate(-2deg);
+    }
+    90% {
+      transform: rotate(2deg);
+    }
+  }
+
+  @keyframes shake-right {
+    0%,
+    100% {
+      transform: rotate(0deg);
+      transform-origin: 100% 50%;
+    }
+    10% {
+      transform: rotate(2deg);
+    }
+    20%,
+    40%,
+    60% {
+      transform: rotate(-4deg);
+    }
+    30%,
+    50%,
+    70% {
+      transform: rotate(4deg);
+    }
+    80% {
+      transform: rotate(-2deg);
+    }
+    90% {
+      transform: rotate(2deg);
+    }
+  }
 
 /* Media Query */
 
