--- a/style.css
+++ b/style.css
@@ -494,8 +494,14 @@ body {
 }
 
 .mynavbar1 {
-    z-index: 2;
+    z-index: 4;
     position: sticky;
+}
+
+.mynavbar2 {
+    z-index: 4;
+    position: sticky;
+
 }
 
 .animate__animated.animate__bounce {
@@ -543,7 +549,7 @@ body {
     position: absolute; width: 100%; height: 100%;
     top:0; left: 0; pointer-events: none;
     z-index: -1;
-    min-height: 100vh;
+    min-height: 200vh;
     transform: scale(2);
 }
 .set img {
