--- a/style.css
+++ b/style.css
@@ -58,32 +58,298 @@ body {
     font-family: "Work Sans", sans-serif;
 }
 
-.hero a {
-    color: white;
-    background-color: #00aeff;
-    box-shadow: var(--shadow);
+.info button {
+  scale: 0.4;
+  color: #0a0a0a;
+  border: 3px solid #0a0a0a;
 }
 
+button {
+    background: linear-gradient(45deg, transparent 27%, #00aeff 5%, #00aeff 73%, transparent 27%);
+    box-shadow: 6px 0px 0px #ffffff;
+    position: relative;
+    padding: 12px 35px;
+    font-size: 20px;
+    font-weight: 500;
+    color: white;
+    border: 3px solid #ffffff;
+    font-family: "Work Sans", sans-serif;
+    letter-spacing: 2px;
+    border-radius: 20px;
+    box-shadow: 0 0 0 #ffffff;
+    transition: all .3s ease-in-out;
+    scale: 0.7;
+    margin-bottom: 50px;
+  }
+  
+  .star-1 {
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    width: 25px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #00aeff);
+    z-index: -5;
+    transition: all 1s cubic-bezier(0.05, 0.83, 0.43, 0.96);
+  }
+  
+  .star-2 {
+    position: absolute;
+    top: 45%;
+    left: 45%;
+    width: 15px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #00aeff);
+    z-index: -5;
+    transition: all 1s cubic-bezier(0, 0.4, 0, 1.01);
+  }
+  
+  .star-3 {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    width: 5px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #00aeff);
+    z-index: -5;
+    transition: all 1s cubic-bezier(0, 0.4, 0, 1.01);
+  }
+  
+  .star-4 {
+    position: absolute;
+    top: 20%;
+    left: 40%;
+    width: 8px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #00aeff);
+    z-index: -5;
+    transition: all .8s cubic-bezier(0, 0.4, 0, 1.01);
+  }
+  
+  .star-5 {
+    position: absolute;
+    top: 25%;
+    left: 45%;
+    width: 15px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #00aeff);
+    z-index: -5;
+    transition: all .6s cubic-bezier(0, 0.4, 0, 1.01);
+  }
+  
+  .star-6 {
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    width: 5px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #00aeff);
+    z-index: -5;
+    transition: all .8s ease;
+  }
+  
+  button:hover {
+    background: transparent;
+    color: #ffffff;
+    box-shadow: 0 0 50px #ffffff;
+  }
+  
+  button:hover .star-1 {
+    position: absolute;
+    top: -80%;
+    left: -30%;
+    width: 25px;
+    height: auto;
+    filter: drop-shadow(0 0 10px #00aeff);
+    z-index: 2;
+  }
+  
+  button:hover .star-2 {
+    position: absolute;
+    top: -25%;
+    left: 10%;
+    width: 15px;
+    height: auto;
+    filter: drop-shadow(0 0 10px #00aeff);
+    z-index: 2;
+  }
+  
+  button:hover .star-3 {
+    position: absolute;
+    top: 55%;
+    left: 25%;
+    width: 5px;
+    height: auto;
+    filter: drop-shadow(0 0 10px #00aeff);
+    z-index: 2;
+  }
+  
+  button:hover .star-4 {
+    position: absolute;
+    top: 30%;
+    left: 80%;
+    width: 8px;
+    height: auto;
+    filter: drop-shadow(0 0 10px #00aeff);
+    z-index: 2;
+  }
+  
+  button:hover .star-5 {
+    position: absolute;
+    top: 25%;
+    left: 115%;
+    width: 15px;
+    height: auto;
+    filter: drop-shadow(0 0 10px #00aeff);
+    z-index: 2;
+  }
+  
+  button:hover .star-6 {
+    position: absolute;
+    top: 5%;
+    left: 60%;
+    width: 5px;
+    height: auto;
+    filter: drop-shadow(0 0 10px #00aeff);
+    z-index: 2;
+  }
+  
+  .fil0 {
+    fill: #00aeff
+  }
 
+@keyframes waves2 {
+  0%{
+    background-position-x: 1000px;
+  }
+  50% {
+    background-position-x: 0px;
+  }
+  100% {
+    background-position-x: 1000px;
+  }
+}
+
+@keyframes waves {
+  0%{
+    background-position-x: 0px;
+  }
+  50% {
+    background-position-x: 1000px;
+  }
+  100% {
+    background-position-x: 0px;
+  }
+}
+
+.waves {
+  position: relative;
+  display: flex;
+  justify-content:  flex-end;
+  align-items: center;
+  flex-direction: column;
+  top: -100px;
+}
+
+.waves .wave {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background: url(img/wave.png);
+  background-size: cover;
+  z-index: -1;
+}
+
+.waves .wave#wave1 {
+  opacity: 1;
+  animation: waves 24s linear infinite;
+  top: 0px;
+}
+.waves .wave#wave2 {
+  opacity: 0.5;
+  animation: waves2 24s linear infinite;
+  top: 5px;
+}
+.waves .wave#wave3 {
+  opacity: 0.2;
+  top: 10px;
+  animation: waves 12s linear infinite;
+}
+.waves .wave#wave4 {
+  opacity: 0.7;
+  top:15px;
+  animation: waves2 12s linear infinite;
+}
+
+.waves1 {
+  position: relative;
+  justify-content: flex-end;
+  align-items: center;
+  flex-direction: column;
+  bottom: -730px;
+}
+
+.waves1 .wave {
+  position: absolute;
+  z-index: 2;
+  bottom: 0px;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background: url(img/wave1.png);
+  background-size: cover;
+  z-index: -1;
+}
+
+.waves1 .wave#wave1 {
+  opacity: 1;
+  animation: waves 24s linear infinite;
+  bottom: 0px;
+}
+.waves1 .wave#wave2 {
+  opacity: 0.5;
+  animation: waves2 24s linear infinite;
+  bottom: 5px;
+}
+.waves1 .wave#wave3 {
+  opacity: 0.2;
+  bottom: 10px;
+  animation: waves 12s linear infinite;
+}
+.waves1 .wave#wave4 {
+  opacity: 0.7;
+  bottom:15px;
+  animation: waves2 12s linear infinite;
+}
+
+.info .waves {
+  top: -25px;
+}
+
+.info .waves1 {
+  bottom: -805px;
+}
 
 .mynavbar {
-    background-color: #00aeff;
+    background-color: #3586ff;
     z-index: 7;
+    height: 100px;
+    text-align: center;
+    font-family: "Work Sans";
 }
 
-.mynavbar .offcanvas {
-    height: 100vh;
-}
-
-.mynavbar .navbar-brand, .mynavbar .offcanvas-tittle {
-    font-family: "Sacramento", cursive;
-    font-size: 3rem;
-    font-weight: bold;
-    color: rgba(0, 174, 255, 0);
-}
-
-.mynavbar .nav-link {
-    text-transform: uppercase; 
+.mynavbar .navbar-brand {
+    font-family: "Work Sans";
+    position: absolute;
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-shadow: var(--shadow);
+    text-transform: uppercase;
+    color: #ffffff;
+    opacity: 0.8;
 }
 
 .home {
@@ -96,8 +362,42 @@ body {
     position: relative;
 }
 
+.bunga, .bunga2 {
+  z-index: -2;
+}
+
 .home .bunga {
     overflow-x: hidden;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.home .bunga2 {
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.info .bunga {
+    overflow-x: hidden;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.info .bunga2 {
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
 .home .samping1 {
@@ -418,9 +718,11 @@ body {
     background-color: #00aeff;
     color: rgb(0, 0, 0);
     font-family: "Work Sans", sans-serif;
+    position: relative;
 }
 
 .info h2 {
+    position: relative;
     font-family: "Sacramento";
     margin-top: 12rem;
     font-weight: bold;
@@ -429,35 +731,18 @@ body {
 }
 
 .info .alamat  {
+    position: relative;
     font-size: 1.2rem;
     font-family: "Work Sans", sans-serif;
     color: rgb(0, 0, 0);
 }
 
 .info .description {
+    position: relative;
     font-size: 1rem;
     font-weight: 300;
 }
 
-.info .card {
-    background-color: #00aeff00 !important;
-    color: rgb(0, 0, 0) !important;
-    border: 1px #00aeff00;
-    width: 100px;
-    position: relative;
-    margin:auto;    
-}
-
-.info .card-header {
-    background-color: #00aeff00;
-    border-bottom: 1px solid rgb(0, 0, 0);
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-}
-
-.info .card-body {
-    font-size: 1.2rem;
-}
 
 .rsvp {
     background-image: url(img/symphony.png);
@@ -509,40 +794,40 @@ body {
 }
 
 .set div:nth-child(1) {
-    left:10%; animation: animate 7s linear infinite;
+    left:10%; animation: animate 22s linear infinite;
 }
 .set div:nth-child(2) {
-    left:20%; animation: animate 9s linear infinite;
+    left:20%; animation: animate 24s linear infinite;
     animation-delay: -7s;
 }
 .set div:nth-child(3) {
-    left:30%; animation: animate 13s linear infinite;
+    left:30%; animation: animate 28s linear infinite;
 }
 .set div:nth-child(4) {
-    left:40%; animation: animate 11s linear infinite;
+    left:40%; animation: animate 26s linear infinite;
     animation-delay: -3s;
 }
 .set div:nth-child(5) {
-    left:50%; animation: animate 6s linear infinite;
+    left:50%; animation: animate 21s linear infinite;
     animation-delay: -2s;
 }
 .set div:nth-child(6) {
-    left:60%; animation: animate 8s linear infinite;
+    left:60%; animation: animate 23s linear infinite;
     animation-delay: -1s;
 }
 .set div:nth-child(7) {
-    left:70%; animation: animate 7s linear infinite;
+    left:70%; animation: animate 22s linear infinite;
 }
 .set div:nth-child(8) {
-    left:80%; animation: animate 15s linear infinite;
+    left:80%; animation: animate 20s linear infinite;
     animation-delay: -7s;
 }
 .set div:nth-child(9) {
-    left:90%; animation: animate 9s linear infinite;
+    left:90%; animation: animate 24s linear infinite;
     animation-delay: -3s;
 }
 .set div:nth-child(10) {
-    left:95%; animation: animate 6s linear infinite;
+    left:95%; animation: animate 21s linear infinite;
     animation-delay: -2s;
 }
 .set {
@@ -578,40 +863,40 @@ body {
 }
 
 .set2 div:nth-child(1) {
-    left:10%; animation: animate 7s linear infinite;
+    left:10%; animation: animate 22s linear infinite;
 }
 .set2 div:nth-child(2) {
-    left:20%; animation: animate 9s linear infinite;
+    left:20%; animation: animate 24s linear infinite;
     animation-delay: -7s;
 }
 .set2 div:nth-child(3) {
-    left:30%; animation: animate 13s linear infinite;
+    left:30%; animation: animate 28s linear infinite;
 }
 .set2 div:nth-child(4) {
-    left:40%; animation: animate 11s linear infinite;
+    left:40%; animation: animate 26s linear infinite;
     animation-delay: -3s;
 }
 .set2 div:nth-child(5) {
-    left:50%; animation: animate 6s linear infinite;
+    left:50%; animation: animate 21s linear infinite;
     animation-delay: -2s;
 }
 .set2 div:nth-child(6) {
-    left:60%; animation: animate 8s linear infinite;
+    left:60%; animation: animate 23s linear infinite;
     animation-delay: -1s;
 }
 .set2 div:nth-child(7) {
-    left:70%; animation: animate 7s linear infinite;
+    left:70%; animation: animate 22s linear infinite;
 }
 .set2 div:nth-child(8) {
-    left:80%; animation: animate 15s linear infinite;
+    left:80%; animation: animate 30s linear infinite;
     animation-delay: -7s;
 }
 .set2 div:nth-child(9) {
-    left:90%; animation: animate 9s linear infinite;
+    left:90%; animation: animate 24s linear infinite;
     animation-delay: -3s;
 }
 .set2 div:nth-child(10) {
-    left:95%; animation: animate 6s linear infinite;
+    left:95%; animation: animate 21s linear infinite;
     animation-delay: -2s;
 }
 
@@ -624,6 +909,210 @@ body {
 .slide-in-tl {
 	animation: slide-in-tl 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
+
+.card {
+    width: 280px;
+    scale: 0.6;
+    margin: auto;
+    margin-top: -60px;
+    height: 280px;
+    background: rgba(255, 255, 255, 0);
+    border-radius: 32px;
+    padding: 3px;
+    position: relative;
+    transition: all 0.5s ease-in-out;
+    border: none
+  }
+  
+  .card .mail {
+    position: absolute;
+    font-family: "Work Sans";
+    letter-spacing: 1px;
+    right: 0;
+    left: 0;
+    top: 1.4rem;
+    background: transparent;
+    border: none;
+  }
+  
+  .card .mail svg {
+    stroke: #fbb9b6;
+    stroke-width: 3px;
+  }
+  
+  .card .mail svg:hover {
+    stroke: #f55d56;
+  }
+
+  .c2 .card .profile-pic {
+    background-image: url(img/gg.png );
+    scale: 1.2;
+  }
+
+  .card .profile-pic {
+    position: absolute;
+    scale: 0.7;
+    width: calc(100% - 6px);
+    height: calc(100% - 6px);
+    background-image: url(img/pngegg\ \(1\).png);
+    background-size: cover;
+    background-position: center;
+    top: 3px;
+    left: 3px;
+    border-radius: 29px;
+    z-index: 1;
+    overflow: hidden;
+    transition: all 0.5s ease-in-out 0.2s, z-index 0.5s ease-in-out 0.2s;
+  }
+  
+  .card .profile-pic img {
+    -o-object-fit: cover;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    -o-object-position: 0px 0px;
+    object-position: 0px 0px;
+    transition: all 0.5s ease-in-out 0s;
+  }
+  
+  .card .profile-pic svg {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -o-object-position: 0px 0px;
+    object-position: 0px 0px;
+    transform-origin: 45% 20%;
+    transition: all 0.5s ease-in-out 0s;
+  }
+  
+  .card .bottom {
+    position: absolute;
+    bottom: 3px;
+    left: 3px;
+    right: 3px;
+    background: #00aeff;
+    top: 80%;
+    border-radius: 29px;
+    z-index: 2;
+    overflow: hidden;
+    transition: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+  }
+  
+  .card .bottom .content {
+    position: absolute;
+    bottom: 0;
+    left: 1.5rem;
+    right: 1.5rem;
+    height: 160px;
+    margin: auto;
+  }
+  
+  .card .bottom .content .name {
+    display: block;
+    font-size: 1.2rem;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    margin:auto;
+    font-size: 3.2rem;
+  }
+  
+  .card .bottom .content .about-me {
+    display: block;
+    font-size: 0.9rem;
+    color: rgb(255, 255, 255);
+    margin-top: 1rem;
+    font-size: 2rem;
+  }
+  
+  .card .bottom .bottom-bottom {
+    position: absolute;
+    bottom: 1rem;
+    left: 1.5rem;
+    right: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .card .bottom .bottom-bottom .social-links-container {
+    display: flex;
+    gap: 1rem;
+    margin: auto;
+    font-family: "Sacramento";
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    font-size: 4rem;
+  }
+  
+  .card .bottom .bottom-bottom .social-links-container svg {
+    height: 20px;
+    fill: white;
+    filter: drop-shadow(0 5px 5px rgba(165, 132, 130, 0.1333333333));
+  }
+  
+  .card .bottom .bottom-bottom .social-links-container svg:hover {
+    fill: #f55d56;
+    transform: scale(1.2);
+  }
+  
+  .card .bottom .bottom-bottom .button {
+    background: white;
+    color: #fbb9b6;
+    border: none;
+    border-radius: 20px;
+    font-size: 0.6rem;
+    padding: 0.4rem 0.6rem;
+    box-shadow: rgba(165, 132, 130, 0.1333333333) 0px 5px 5px 0px;
+  }
+  
+  .card .bottom .bottom-bottom .button:hover {
+    background: #f55d56;
+    color: white;
+  }
+  
+  .card:hover {
+    border-top-left-radius: 55px;
+  }
+  
+  .card:hover .bottom {
+    top: 20%;
+    border-radius: 80px 29px 29px 29px;
+    transition: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.2s;
+  }
+  
+  .card:hover .profile-pic {
+    width: 100px;
+    height: 100px;
+    aspect-ratio: 1;
+    top: 10px;
+    left: 10px;
+    border-radius: 50%;
+    z-index: 3;
+    transition: all 0.5s ease-in-out, z-index 0.5s ease-in-out 0.1s;
+  }
+  
+  .card:hover .profile-pic:hover {
+    transform: scale(1.3);
+    border-radius: 0px;
+  }
+  
+  .card:hover .profile-pic img {
+    transform: scale(2.5);
+    -o-object-position: 0px 25px;
+    object-position: 0px 25px;
+    transition: all 0.5s ease-in-out 0.5s;
+  }
+  
+  .card:hover .profile-pic svg {
+    transform: scale(2.5);
+    transition: all 0.5s ease-in-out 0.5s;
+  }
+
+  .card:hover .mail {
+    opacity: 0;
+  }
+  
 
 /**
  * ----------------------------------------
@@ -862,18 +1351,13 @@ body {
         padding: 60px;
         margin: 5px;
     }     
-    
-    .mynavbar .nav-link {
-        font-size: 1.7rem;
-        text-align: center;
-    }
 
     .simply-countdown .simply-section {
         font-size: large;
     }
     
     .info h2 {
-        margin-top: 30rem;
+        margin-top: 10rem;
     }
 
     .hero h5 {
@@ -958,7 +1442,7 @@ body {
         letter-spacing: 1rem;
     }
 
-    .info .card, .info a {
+    .info a {
         font-size: 117%;
 
     }
@@ -1005,10 +1489,10 @@ body {
     }
 
     .set2 {
-        position: absolute; width: 50%; height: auto;
+        position: absolute; width: 100%; height: auto;
     }
     .set {
-        position: absolute; width: 50%; height: auto;
+        position: absolute; width: 100%; height: auto;
     }
 
     .hero h4 {
@@ -1018,4 +1502,5 @@ body {
     .home .couple {
         margin-top: 73px;
     }
+
 }
