--- a/animationset.css
+++ b/animationset.css
@@ -63,7 +63,7 @@
     bottom:15px;
     animation: waves2 12s linear infinite;
   }
-  /* infoWves */
+  /* infoWaves */
   .info .wave {
     position: absolute;
     z-index: 2;
@@ -87,12 +87,36 @@
     margin-bottom: -25px;
   }
 
+  /* komenWaves */
+  .komen .wave {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background: url(img/wave.png);
+    background-size: cover;
+    margin-top: -25px;
+  }
+  .komen .wave1 {
+    position: absolute;
+    z-index: 2;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background: url(img/wave1.png);
+    background-size: cover;
+    margin-bottom: -25px;
+  }
+
 /* leaves */
 .set {
     position: absolute; width: 100%; height: 100%;
     top:0; left: 0; pointer-events: none;
     z-index: -1;
-    min-height: 200vh;
+    min-height: 300vh;
     transform: scale(2);
   }
   .set img {
@@ -106,7 +130,7 @@
     position: absolute; width: 100%; height: 100%;
     top:0; left: 0; pointer-events: none;
     z-index: -1;
-    min-height: 100vh;
+    min-height: 200vh;
     filter: blur(0.5px);
     transform: scale(-3); rotate: 180deg;
   }
@@ -479,6 +503,139 @@
     width: 20%;
     animation: shake-bl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
   }
+  /* komenFlowers */
+  .komen .bunga {
+    overflow-x: hidden;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+  .komen .bunga2 {
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+  .komen .samping1 {
+    z-index: -2;
+    position: absolute;
+    bottom: 200px;
+    width: 35%;
+    left: -50px;
+    margin: auto;
+    animation: shake-left 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.komen .samping2 {
+    z-index: -2;
+    position: absolute;
+    top: 200px;
+    width: 30%;
+    right: -40px;
+    margin: auto;
+    animation: shake-right 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.komen .goyang1 {
+    z-index: -2;
+    position: absolute;
+    width: 35%;
+    top: -50px;
+    animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+    
+}
+.komen .goyang {
+    z-index: -2;
+    position: absolute;
+    width: 35%;
+    top: -50px;
+    animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.komen .goyang4 {
+    z-index: -2;
+    position: absolute;
+    width: 30%;
+    left: -70px;
+    top: -10px;
+    animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.komen .goyang5 {
+    z-index: -2;
+    position: absolute;
+    width: 50%;
+    top: -60px;
+    animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.komen .goyang3 {
+    z-index: -2;
+    position: absolute;
+    width: 30%;
+    top: -50px;
+    left: -50px;
+    animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.komen .goyang2 {
+    z-index: -2;
+    position: absolute;
+    width: 20%;
+    top: -50px;
+    left: -50px;
+    animation: shake-tl 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.komen .couple a {
+    font-size: 1.3rem;
+    color: #666;
+}
+.komen .yang1 {
+    z-index: -2;
+    position: absolute;
+    right: 0px;
+    bottom: -50px;
+    width: 35%;
+
+    animation: shake-br 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.komen .yang {
+    z-index: -2;
+    position: absolute;
+    right: 0px;
+    bottom: -50px;
+    width: 35%;
+    animation: shake-br 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.komen .yang4 {
+    z-index: -2;
+    position: absolute;
+    width: 30%;
+    right: -70px;
+    bottom: -10px;
+    animation: shake-br 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.komen .yang5 {
+    z-index: -2;
+    position: absolute;
+    width: 50%;
+    right: 0px;
+    bottom: -60px;
+    animation: shake-br 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.komen .yang3 {
+    z-index: -2;
+    position: absolute;
+    width: 30%;
+    right: -50px;
+    bottom: -50px;
+    animation: shake-br 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.komen .yang2 {
+    z-index: -2;
+    position: absolute;
+    right: -50px;
+    bottom: -50px;
+    width: 20%;
+    animation: shake-br 20s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
   
   /* button */
   button {
@@ -630,7 +787,7 @@
   
   
   /* card */
-  .card {
+  .info .card {
     width: 280px;
     scale: 0.6;
     margin: auto;
@@ -808,4 +965,21 @@
   .card:hover .mail {
     opacity: 0;
   }
-  
+
+  .komen .card {
+    width: 400px;
+    margin: auto;
+    margin-top: -60px;
+    border: none;
+    pointer-events: none;
+    z-index: -3;
+    position: relative;
+  }
+
+  .komen h1 {
+    color: #00aeff;
+    font-family: "Sacramento", cursive;
+    font-size: 5rem;
+    font-weight: bold;
+    z-index: 2;
+  }
