--- a/animationset.css
+++ b/animationset.css
@@ -3,14 +3,14 @@
 /* waves */
   .home .wave {
     position: absolute;
-    z-index: 2;
+    z-index: -1 !important;
     top: 0;
     left: 0;
     width: 100%;
     height: 60px;
     background: url(img/wave.png);
     background-size: cover;
-    margin-top: -25px;
+    margin-top: -23px;
   }
   .home .wave1 {
     position: absolute;
@@ -221,6 +221,7 @@
   .mynavbar1 {
     z-index: 4;
     position: sticky;
+    margin-top: -2rem;
   }
   /* homeFlower */
   .samping1, .samping2 {
@@ -788,7 +789,7 @@
   }
   /* infoButton */
   .info button {
-    scale: 0.4;
+    scale: 0.6;
     color: #0a0a0a;
     border: 3px solid #F3E9A8;
   }
@@ -800,7 +801,7 @@
     scale: 0.6;
     margin: auto;
     margin-top: -60px;
-    height: 280px;
+    height: 310px;
     background: rgba(255, 255, 255, 0);
     border-radius: 32px;
     padding: 3px;
@@ -871,7 +872,7 @@
     left: 3px;
     right: 3px;
     background: #00aeff;
-    top: 80%;
+    top: 78%;
     border-radius: 29px;
     z-index: 2;
     overflow: hidden;
@@ -921,7 +922,7 @@
     font-family: "Sacramento";
     font-weight: bold;
     color: #F3E9A8;
-    font-size: 4rem;
+    font-size: 6rem;
   }
   .card .bottom .bottom-bottom .social-links-container svg {
     height: 20px;
