--- a/style.css
+++ b/style.css
@@ -194,8 +194,11 @@ body {
     font-size: 1.5rem;
     margin-bottom: 3rem;
     z-index: 2;
+    margin-top: -4rem;
 }
-
+#commento-login-box-container {
+    overflow: hidden;
+}
 .home h4 {
     font-family: "Scheherazade New", serif;
     font-size: 3rem;
@@ -454,7 +457,7 @@ body {
     .home h4 {
         font-size: 4rem;
         margin-bottom: 20px;
-        margin-top: -2.5rem;
+        margin-top: 2rem;
     }
 
     .home p, .info p, .rsvp p, .komen p {
