--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@ body {
     font-family: "Work Sans", sans-serif;
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     position: relative;
 }
-
+section {
+    overflow : hidden;
+}
 /* Hero */
 
 .hero {
