--- a/animationset.css
+++ b/animationset.css
@@ -308,6 +308,7 @@
   z-index: 4;
   position: sticky;
   margin-top: -2rem;
+  overflow: hidden;
 }
 /* homeFlower */
 .samping1, .samping2 {
@@ -317,6 +318,7 @@
   z-index: -2;
   pointer-events: none;
   filter: drop-shadow(10px 10px 10px solid black);
+  overflow: hidden;
 }
 .home .bunga {
     overflow-x: hidden;
